name:                hasketodo
version:             0.1.0.0
homepage:            https://github.com/eckertalex/hasketodo#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Eckert
maintainer:          ae@alasconnect.com
copyright:           2018 Alexander Eckert
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hasketodo
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Model
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                        , wai
                        , warp
                        , http-types
                        , resourcet
                        , scotty
                        , text
                        , bytestring
                        , blaze-html
                        , persistent
                        , persistent-template
                        , persistent-sqlite
                        , monad-logger
                        , transformers
                        , wai-middleware-static
                        , wai-extra
                        , time
